feat: Modern dashboard redesign with automation system
- Implemented advanced automation system with dual-mode execution (API/Browser/App)
- Created 23 pre-configured automation templates across 8 categories
- Platform-aware execution engine with safety guards
- Automation controller with Riverpod state management

- Complete dashboard redesign with modern glassmorphic UI
- Compact metrics card (CPU/RAM/Disk in single row)
- AI Chat FAB with pulse animation
- Floating bottom navigation bar (5 sections)
- Dashboard customization system with SharedPreferences
- Layout persistence and edit mode

- Added googleapis, http, process_run, flutter_speed_dial packages
- Platform helper for cross-platform compatibility
- Updated AppColors with primary/secondary gradients
- Added dashboard, ram icons to AppIcons

UI Components:
- CompactMetricsCard: Horizontal metrics display
- AIChatFAB: Animated floating button with overlay
- FloatingBottomBar: Modern navigation
- Dashboard customization controller

All features tested and working on Linux.
Ready for Android Studio integration.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,17 @@ dependencies:
   
   # Scheduling
   cron: ^0.6.0
+  
+  # Automation & APIs (Cross-platform)
+  googleapis: ^13.2.0
+  googleapis_auth: ^1.6.0
+  http: ^1.2.0
+  
+  # Process execution (Platform-specific with checks)
+  process_run: ^1.2.0
+  
+  # UI Components
+  flutter_speed_dial: ^7.0.0
 
 dev_dependencies:
   flutter_test:
