feat: Advanced automation system with templates filtering
- Created AutomationMainScreen with 4 tabs (Active, Templates, Create, Marketplace)
- Implemented smart templates filtering: locked/unlocked based on configured services
- Built ModernSettingsScreen with service connection management
- Added ExtendedAppSettings model supporting 13+ services
- Templates show LOCKED badge when service not configured
- Added 'Connect Service' button navigation to Settings
- Created 10+ automation templates with categories
- Fixed Android UI padding issues across all screens
- Integrated AI Chat in dashboard
- Added Recent Activity page
- Updated file_picker to v8.1.6 for Android compatibility

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,17 @@ dependencies:
   # Platform Integration
   ffi: ^2.1.0
   
+  # System Metrics (Cross-platform)
+  system_info2: ^4.0.0
+  device_info_plus: ^10.1.0
+
   # UI/UX Components
   flutter_animate: ^4.5.0
   glassmorphism_ui: ^0.3.0
   fl_chart: ^0.66.2
   
   # File Management
-  file_picker: ^6.1.1
+  file_picker: ^8.1.6
   
   # Terminal
   xterm: ^3.5.0
