--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   
   # UI Components
   flutter_speed_dial: ^7.0.0
+  font_awesome_flutter: ^10.12.0
 
 dev_dependencies:
   flutter_test:
