--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,8 +16,15 @@ dependencies:
   flutter:
     sdk: flutter
   
+  # CLI tooling
+  args: ^2.5.0
+  
   # State Management
   flutter_riverpod: ^2.5.1
+  provider: ^6.0.0
+  
+  # HTTP Client
+  http: ^1.4.0
   
   # Database
   sqflite: ^2.3.0
@@ -68,8 +75,7 @@ dependencies:
   # Automation & APIs (Cross-platform)
   googleapis: ^13.2.0
   googleapis_auth: ^1.6.0
-  http: ^1.2.0
-  
+
   # Process execution (Platform-specific with checks)
   process_run: ^1.2.0
   
